static/css/new-home.css
* {
    box-sizing: border-box;
}

:root {
    --light-background: #a8d0e6;
    --dark-background: #24305e;
    --light-text-color: white;
    --dark-text-color: #24305e;
}

body {
    margin: 0px;
    background-color: var(--light-background);
    color: var(--light-text-color);
    font-family: Inter, Arial, Helvetica, sans-serif; /* 'Roboto Condensed' */
}

#top {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 35px 0 45px 0;
    background-color: var(--dark-background);
    }

    #info {
        display: flex;
        flex-direction: column;
        justify-content: space-around;
        width: 287px;
        height: 350px;
        }
        
        #info > img {
            height: 200px;
            margin-left: auto;
            margin-right: auto;
            text-align: center;
            border-radius: 100%;
        }
        
        #links {
            display: flex;
            justify-content: space-between;
            margin-left: auto;
            margin-right: auto;
            }

            #links img,
            #links a {
                height: 75px;
                border-radius: 100%;
            }
            
            #links img {
                box-shadow: 0px 0px 8px #363636;
                }
                
                #links img:hover {
                    box-shadow: 0px 0px 8px #555;
}
            

    #name-box {
        display: flex;
        flex-direction: column;
        margin-top: 25px;
        text-align: center;
        }
        
        #name-box > h1 {
            margin: 8px 0 20px 0;
            font-size: 28pt;
            color: var(--light-text-color);
        }
        
        /* Part of scrolling animation as well */
        #name-box div span,
        #position-roller li {
            vertical-align: top;
            font-size: 20pt;
            color: var(--light-text-color);
        }

        #position-roller {
            display: inline-block;
            height: calc(20pt + 6px);
            margin: 0;
            padding-left: 0;
            overflow: scroll;
            list-style: none;
            scroll-snap-type: y mandatory;
            -ms-overflow-style: none;  /* Edge */
            scrollbar-width: none;  /* Firefox */
            }

            #position-roller::-webkit-scrollbar {
                display: none;  /* Chrome, Edge, Safari */
            }

            #position-roller li {
                display: block;
                margin-bottom: 4px;
                text-align: start;
                scroll-snap-align: start;
                }
                
                #position-roller li:last-of-type {
                    /* margin-bottom: 0; */
        }

        @media (min-width: 1025px) {
            #name-box {
                margin-left: 150px;
            }
        }

        @media (min-width: 840px) {
            #top {
                flex-direction: row;
                }

                #name-box {
                    padding-top: 40px;
                    text-align: start;
            }
        }

        @media (min-width: 698px) {
            #name-box {
                margin-left: 40px;
                margin-right: 40px;
            }
        }

        @media (min-width: 400px) {
            #name-box > h1 br {
                display: none;
        }
}
        
#portfolio {
    margin: 50px 0 -12px 0;
    }
    
    #portfolio > h2 {
        text-align: center;
        color: var(--dark-text-color);
    }
    
    #portfolio-items {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        max-width: 1500px;
        margin-top: 50px;
        margin-left: auto;
        margin-right: auto;
        }

        .portfolio-item {
            width: 325px;
            min-height: 325px;
            max-width: 100vw;
            justify-self: center;
            margin: 12px;
            padding: 20px;
            background-color: rgba(50,50,50,.15);
            }

            .portfolio-item .portfolio-img-container {
                display: flex;
                height: 100px;
                justify-content: center;
                }
                
                .portfolio-item .portfolio-img-container a {
                    display: flex;
            }
            
            .portfolio-item p,
            .portfolio-item li {
                font-size: .88em;
}

#get-in-touch {
    margin: 75px 0;
    }

    #get-in-touch button {
        display: block;
        margin-left: auto;
        margin-right: auto;
        border: none;
        width: 200px;
        height: 50px;
        border-radius: 30px;
        font-size: 13pt;
        font-weight: 600;
        font-family: 'Roboto Condensed', Arial, Helvetica, sans-serif;
        color: var(--light-text-color);
        background-color: var(--dark-background);
        box-shadow: 0px 0px 8px #888;
        cursor: pointer;
        }

        #get-in-touch button:hover {
            box-shadow: 0px 0px 8px #aaa;
    }
    
    #get-in-touch > span {
        display: block;
        text-align: center;
        margin: 12px 0 -31px 0;  /* -31px cancels page shift */
        color: var(--dark-text-color);
        }

        /* Copy icon */
        #get-in-touch span img {
            height: 10pt;
            margin-left: 5px;
            cursor: pointer;
            user-select: none;
        }

        /* Error message if copy fails */
        #get-in-touch span::after {
            content: attr(data-err-msg);
            display: block;
            margin-top: 2px;
            color: #ef0000;
}

footer {
    margin: 100px 0 15px 0;
    }
    
    footer > span {
        display: block;
        text-align: center;
        font-size: .88em;
        color: var(--dark-text-color);
        }
        
        @media (min-width: 716px) {
            footer > span {
                display: inline;
                text-align: start;
                margin-left: 20px;
    }
}

